fix the form spacing and style color to input focus visible

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -561,6 +561,7 @@ a:hover {
 	text-align: center; 
 	color: var(--text-color); 
 	font-weight: 700; 
+  margin-bottom: 60px;
 } 
 
 i { 
@@ -570,32 +571,37 @@ i {
 .form-box { 
 	background-color: #fff; 
 	box-shadow: 0 0 10px var(--main-color); 
-	padding: 80px 15px; 
+	padding: 60px 45px; 
 	border-radius: 8px; 
-	width: 60%; 
+	width: 85%;
   margin: 0 auto;
 } 
 
-form { 
-	max-width: 400px; 
-	margin: 0 auto; 
-} 
+@media (min-width: 768px) { 
+  .form-box {  
+    width: 50%;
+  } 
+}
 
+form { 
+	max-width: 100%; 
+} 
+.service > label {
+  margin-bottom: 20px;
+  display: inline-block;
+}
 .radio-group { 
 	display: flex; 
 	margin-bottom: 16px; 
+  justify-content: flex-start;
 } 
 
 input[type="radio"] { 
-	margin-right: 8px; 
+  width:10%;
 } 
 
 label { 
-	display: block; 
-	margin-bottom: 8px; 
-	font-size: 17px; 
 	color: var(--text-color);
-	font-weight: 600; 
 } 
 
 input, 
@@ -625,6 +631,17 @@ button:hover {
 	border: none; 
 	/* transform: translateY(-10px);  */
 } 
+
+#yes, #no {
+  accent-color: var(--main-color);
+}
+input:focus-visible {
+  outline: none;
+}
+
+.email, .phone, .service, .message, .btn-submit {
+  margin-top:25px;
+}
 
 /* footer */
 
